# hBayesDM

./: .gitignore  .readthedocs.yml  .tool-versions  CLAUDE.md  CONTRIBUTING.md  DEVELOPERS.md  README.md  hbayesdm_2_0_docs_update_plan.md  hbayesdm_covariate_implementation_plan.md  hbayesdm_covariate_plus_growth_plan.md  quickstart-test.md
.github/workflows/: Python.yaml  R.yaml  pkgdown.yaml
Python/: Makefile  README.rst  pyproject.toml
Python/docs/: conf.py  requirements.txt
Python/hbayesdm/: base.py  diagnostics.py  preprocess_funcs.py
Python/hbayesdm/models/: _alt_delta.py  _alt_gamma.py  _bandit2arm_delta.py  _bandit4arm2_kalman_filter.py  _bandit4arm_2par_lapse.py  _bandit4arm_4par.py  _bandit4arm_lapse.py  _bandit4arm_lapse_decay.py  _bandit4arm_singleA_lapse.py  _banditNarm_2par_lapse.py  _banditNarm_4par.py  _banditNarm_delta.py  _banditNarm_kalman_filter.py  _banditNarm_lapse.py  _banditNarm_lapse_decay.py  _banditNarm_singleA_lapse.py  _bart_ewmv.py  _bart_par4.py  _cgt_cm.py  _choiceRT_ddm.py  _choiceRT_ddm_single.py  _cra_exp.py  _cra_linear.py  _dbdm_prob_weight.py  _dd_cs.py  _dd_cs_single.py  _dd_exp.py  _dd_hyperbolic.py  _dd_hyperbolic_single.py  _gng_m1.py  _gng_m2.py  _gng_m3.py  _gng_m4.py  _hgf_ibrb.py  _hgf_ibrb_single.py  _igt_orl.py  _igt_pvl_decay.py  _igt_pvl_delta.py  _igt_vpp.py  _peer_ocu.py  (+24 more)
Python/tests/: test_user_facing.py
R/: .tool-versions  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  cran-comments.md
R/R/: .tool-versions  alt_delta.R  alt_gamma.R  bandit2arm_delta.R  bandit4arm2_kalman_filter.R  bandit4arm_2par_lapse.R  bandit4arm_4par.R  cgt_cm.R  (+74 more)
commons/: README.md  convert-to-py.py  convert-to-r.py  generate-codes.sh
(+153 files in other folders)
