[project]
name = "hbayesdm"
version = "2.0.0.dev0"
description = "Python interface for hBayesDM, hierarchical Bayesian modeling of RL-DM tasks"
readme = "README.rst"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "hBayesDM developers", email = "hbayesdm-users@googlegroups.com" },
]
requires-python = ">=3.13"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "numpy>=2.1,<3.0",
  "scipy>=1.14,<2.0",
  "pandas>=2.2,<3.0",
  "cmdstanpy>=1.2.5,<2.0",
  "matplotlib>=3.9,<4.0",
  "arviz>=0.20,<1.0",
]

[project.urls]
Repository = "https://github.com/CCS-Lab/hBayesDM"
Documentation = "http://hbayesdm.readthedocs.io/"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-rerunfailures>=14",
  "ruff>=0.7",
  "mypy>=1.13",
  "sphinx>=8",
  "sphinx-autodoc-typehints>=2.5",
  "sphinx-rtd-theme>=3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hbayesdm"]

[tool.hatch.build.targets.sdist]
include = ["hbayesdm", "README.rst"]

[tool.hatch.build]
include = [
  "hbayesdm/**/*.py",
  "hbayesdm/common/extdata/**/*",
  "hbayesdm/common/stan_files/**/*",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
follow_imports = "skip"
